local storage is kind or working

--- a/style.css
+++ b/style.css
@@ -30,6 +30,11 @@ header {
     font-size: 20px;
 }
 
+#error {
+    color: red;
+    font-weight: bold;
+}
+
 .btn {
     height: 30px;
     width: 40px;
